# conan_trial_test_requires

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  requirements_bad.txt  requirements_good.txt  run_build.sh
conan_config/: global.conf
core/: CMakeLists.txt
core/include/: tiff_writer_api.h
core/src/: tiff_writer.cpp  tiff_writer.hpp  tiff_writer_api.cpp
test/: CMakeLists.txt  test_tiff_writer.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test_tiff_writer_pkg.cpp
